# agent-rag-mcp

./: .env.example  Dockerfile  GEMINI.md  README.md  docker-compose.yml  fastmcp.json  main.py  mcp.json  pyproject.toml
.github/workflows/: actions.yml
config/: fastmcp.json  mcp.json
docs/: AGENT_PROMPT.md  future_jwt_auth.md
k8s-manifests/: agent-rag-mcp.yaml  fastmcp.yaml  kustomization.yaml  ollama.yaml  weaviate.yaml
schema/: request_schema.json  request_schema.toon
src/agent_rag_mcp/: __init__.py  client.py  config.py  gemini_rag.py  server.py
src/agent_rag_mcp/client/: main.py  main_http.py
src/agent_rag_mcp/core/: config.py
src/agent_rag_mcp/server/: embeddings.py  gemini.py  main.py  weaviate_store.py
tests/: debug_gemini_search.py  debug_genai_types.py  run_all.py  test_container.py  test_local.py  test_refactored_tools.py  test_sse.py  verify_all_tools.py
tests/archive/: debug_async_sdk.py  debug_gemini.py  debug_toon.py  list_models.py  test_simple_tools.py  verify_rag_latency.py
